# Design-Patterns

Adapter/Adapter/: CMakeLists.txt  Circle.cpp  Circle.h  CircleAdapterClassImpl.cpp  CircleAdapterClassImpl.h  CircleAdapterObjectImpl.cpp  CircleAdapterObjectImpl.h  DrawingEditor.cpp  DrawingEditor.h  IShape.h  Rectangle.cpp  Rectangle.h  Shape.h  main.cpp
Builder/Builder/: CMakeLists.txt  Car.cpp  Car.h  CounterCarBuilder.cpp  CounterCarBuilder.h  Director.cpp  Director.h  ICarBuilder.h  StandardCarBuilder.cpp  StandardCarBuilder.h  main.cpp
